tests/NormalTests/paczka2/big_fuzzy/28751443.err
Error in line 10: Taje8c6 S386 31,0
Error in line 13: hu0C0nPlu S386 26,6
Error in line 15: UdS A489 58,0
Error in line 23: Taje8c6 A489 7,6
Error in line 24: Taje8c6 S294 30,2
Error in line 30: hu0C0nPlu S798 90,9
Error in line 38: hu0C0nPlu A489 23,4
Error in line 40: hu0C0nPlu S386 23,8
Error in line 37: S386 S386 82,2
Error in line 39: UdS S386 80,6
Error in line 41: hu0C0nPlu S294 20,5
Error in line 44: 3WHsEMV S386 82,5
Error in line 48: hu0C0nPlu S798 28,7
Error in line 53: k2eqGAysx A489 30,1
Error in line 52: hu0C0nPlu S294 85,5
Error in line 57: k2eqGAysx S294 53,8
Error in line 61: hu0C0nPlu S386 29,8
Error in line 74: Taje8c6 S386 65,3
Error in line 69: 3bZ0Xu9Rr A489 35,3
Error in line 90: 3bZ0Xu9Rr S386 95,4
Error in line 88: 3WHsEMV S294 78,1
Error in line 101: 3bZ0Xu9Rr S294 d4,9
Error in line 102: 3bZ0Xu9Rr S294 11,9
Error in line 93: k2eqGAysx A489 350,0
Error in line 105: k2eqGAysx S798 64,1
Error in line 117: k2eqGAysx S386 357,00
Error in line 108: 3bZ0Xu9Rr A489 133,3
Error in line 133: k2eqGAysx S386 -2,4
Error in line 143: 3bZ0Xu9Rr S798 29,3
Error in line 150: hu0C0nPlu S294 92,0
Error in line 135: UdS S798 83,6
Error in line 154: 3bZ0Xu9Rr S294 80,0
Error in line 177: 3bZ0Xu9Rr S386 25,8
Error in line 203: hu0C0nPlu S386 316,9
Error in line 187: Taje8c6 S386 6,1
Error in line 215: UdS S386 47,4
Error in line 223: UdS S798 91,0
Error in line 225: UdS A489 37,9
Error in line 240: 3WHsEMV S294 1564,3
